--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing=20>
       <tr>
         <td>
-          <img src="C:\Users\ASWAMTH\Desktop\thejo\thejo.jpg" alt="THEJO V V Profile Picture"height="250" width="250">
+          <img src="https://github.com/THEJOVV/cvone/blob/master/thejo.jpg?raw=true" alt="THEJO V V Profile Picture"height="250" width="250">
         </td>
         <td>
           <h1> THEJO V V </h1>
